--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -5,17 +5,22 @@
     android:viewportWidth="108"
     android:viewportHeight="108">
     
-    <!-- Hexagonal Border -->
+    <!-- Modern Shield Icon -->
     <path
-        android:pathData="M54,18 L85.17,36 L85.17,72 L54,90 L22.83,72 L22.83,36 Z"
-        android:strokeColor="#2196F3"
-        android:strokeWidth="3"
-        android:strokeLineCap="round"
-        android:strokeLineJoin="round" />
-    
-    <!-- Shield Icon in Center -->
-    <path
+        android:pathData="M54,22L72,32L72,54C72,72 54,86 54,86C54,86 36,72 36,54L36,32L54,22Z"
         android:fillColor="#2196F3"
-        android:pathData="M54,32 C54,32 68,32 68,32 L68,52 C68,64.44 54,76 54,76 C54,76 40,64.44 40,52 L40,32 C40,32 54,32 54,32 Z" />
+        android:strokeColor="#1976D2"
+        android:strokeWidth="1" />
+    
+    <!-- Inner Hexagon for Tech Feel -->
+    <path
+        android:pathData="M54,36L64,42L64,54L54,60L44,54L44,42Z"
+        android:fillColor="#FFFFFF"
+        android:fillAlpha="0.8" />
+    
+    <!-- Central Dot for Focus -->
+    <path
+        android:pathData="M54,52m-2,0a2,2 0,1 1,4 0a2,2 0,1 1,-4 0"
+        android:fillColor="#FFFFFF" />
         
 </vector>
